# pandoc-japanese-docx

./: .travis.yml  README.md  pandoc-japanese-docx.cabal  pandoc-japanese.hs
src/Text/Pandoc/Readers/Docx/: Except.hs  Japanese.hs  Parse.hs
test/Text/Pandoc/Readers/Docx/: JapaneseSpec.hs
