name:                pandoc-japanese-docx
version:             0.1.0.0
synopsis:            Enhanced Pandoc Docx reader with Japanese markup support
description:         Enhanced Pandoc Docx reader with Japanese markup support
license:             GPL-2
license-file:        LICENSE
author:              Hiromi ISHII <konn.jinro_at_gmail.com>
maintainer:          Hiromi ISHII <konn.jinro_at_gmail.com>
copyright:           (c) Hiromi ISHII 2015
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/konn/pandoc-japanese-docx.git

library
  exposed-modules:     Text.Pandoc.Readers.Docx.Japanese
  other-modules:       Text.Pandoc.Readers.Docx.Fonts
                       Text.Pandoc.Readers.Docx.Lists
                       Text.Pandoc.Readers.Docx.Parse
                       Text.Pandoc.Readers.Docx.Reducible
  -- other-extensions:    
  build-depends:       base       >= 4 && <5
                     , bytestring >= 0.10.4.0
                     , containers >= 0.5.5.1
                     , data-default >= 0.5.3
                     , filepath >= 1.3.0.2
                     , mtl
                     , pandoc >= 1.13.1
                     , pandoc >= 1.13.1
                     , pandoc-types
                     , texmath >= 0.8
                     , text >= 1.1.0.0
                     , xml >= 1.3.13
                     , zip-archive >= 0.2.3.4
  hs-source-dirs:      src
  default-language:    Haskell2010

-- test-suite spec
--   type:                 exitcode-stdio-1.0
--   default-language:     Haskell2010
--   hs-source-dirs:       test
--   ghc-options:          -Wall
--   Main-is:              Spec.hs
--   build-depends:        QuickCheck
--                       , base
--                       , hspec
--                       , pandoc >= 1.13.1
--                       , pandoc-japanese-docx
--                       , texmath >= 0.8
