name:                pandoc-japanese-docx
version:             0.1.0.0
synopsis:            Enhanced Pandoc Docx reader with Japanese markup support
description:         Enhanced Pandoc Docx reader with Japanese markup support
license:             GPL-2
license-file:        LICENSE
author:              Hiromi ISHII <konn.jinro_at_gmail.com>
maintainer:          Hiromi ISHII <konn.jinro_at_gmail.com>
copyright:           (c) Hiromi ISHII 2015
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag executable
  Description: Build executable
  Default: False

source-repository head
  type: git
  location: git://github.com/konn/pandoc-japanese-docx.git

library
  exposed-modules:     Text.Pandoc.Readers.Docx.Japanese
  other-modules:       Text.Pandoc.Readers.Docx.Fonts
                       Text.Pandoc.Readers.Docx.Lists
                       Text.Pandoc.Readers.Docx.Parse
                       Text.Pandoc.Readers.Docx.Reducible
                       Text.Pandoc.Readers.Docx.Except
  -- other-extensions:    
  build-depends:       base       >= 4 && <5
                     , bytestring >= 0.10.4.0
                     , containers >= 0.5.5.1
                     , data-default >= 0.5.3
                     , filepath >= 1.3.0.2
                     , mtl
                     , pandoc >= 1.13.1
                     , pandoc >= 1.13.1
                     , pandoc-types
                     , texmath >= 0.8
                     , text >= 1.1.0.0
                     , xml >= 1.3.13
                     , zip-archive >= 0.2.3.4
  hs-source-dirs:      src
  default-language:    Haskell2010

executable pandoc-japanese
  Buildable:         True
  Main-is:             pandoc-japanese.hs
  Other-modules:
  build-depends:       HTTP >= 4000.0.5 && < 4000.3
                     , aeson >= 0.7.0.5 && < 0.9
                     , base
                     , base >= 4.2 && <5
                     , bytestring
                     , bytestring >= 0.9 && < 0.11
                     , containers
                     , containers >= 0.1 && < 0.6
                     , data-default
                     , directory >= 1 && < 1.3
                     , directory >= 1.2.1.0
                     , extensible-exceptions >= 0.1 && < 0.2
                     , filepath
                     , filepath >= 1.1 && < 1.4
                     , highlighting-kate >= 0.5.11.1 && < 0.6
                     , network-uri >= 2.6.0.1
                     , pandoc
                     , pandoc-japanese-docx
                     , pandoc-types >= 1.12.4 && < 1.13
                     , text
                     , text >= 0.11 && < 1.3
                     , text >= 1.1.0.0
                     , yaml >= 0.8.8.2 && < 0.9
  default-language:    Haskell2010
  other-extensions:    PatternGuards, OverloadedStrings,
                       ScopedTypeVariables, GeneralizedNewtypeDeriving,
                       RelaxedPolyRec, DeriveDataTypeable, TypeSynonymInstances,
                       FlexibleInstances

